# cube

./: CMakeLists.txt  Makefile  main.c
.github/workflows/: cmake-single-platform-windows.yml  cmake-single-platform.yml  makefile.yml
